get rid of dark mode and work on utility pages

--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -33,7 +33,7 @@ eleventyNavigation:
                 <img loading="lazy" decoding="async" src="/assets/images/why-us.png" alt="therapy" width="608" height="400">
             </picture>
             <div class="cs-content">
-                <span class="cs-topper">Why Choose Us</span>
+                <span class="cs-topper">Why Choose SunSeeker Rentals</span>
                 <h2 class="cs-title">Hire a property manager with a spirit of Excellence!
                 </h2>
                 <p class="cs-text">
@@ -46,16 +46,16 @@ eleventyNavigation:
                     Simple Pricing
                 </h3>
                 <p class="cs-item-text">
-                  Our pricing is simple, transparent, and designed to reflect the quality of service we provide. While exact costs can vary based on the property and location, most of our owners pay a standard monthly rate along with a one-time leasing fee. We’d be happy to provide a detailed quote based on your specific property—just reach out and we’ll walk you through it!                  
+                  Our pricing is simple, transparent, and designed to reflect the quality of service we provide. While exact costs can vary based on the property and location, most of our owners pay a standard monthly rate along with a one-time leasing fee. We’d be happy to provide a detailed quote based on your specific property. Reach out to us and we will walk you through the process!                  
                 </p>
             </li>
             <li class="cs-item">
                 <h3 class="cs-h3">
-                    No Upfront Fees
+                    No Upfront Cost
                 </h3>
                 <p class="cs-item-text">
                   We're confident in what we do, which is why we don’t charge you any fees fees until your home is rented and the tenant has officially moved in.  
-                  We truly care about our clients and stand behind the services we provide. If you’re not happy with how things are going, you can cancel at any time—no cancellation fees, no pressure.              
+                  We truly care about our clients and stand behind the services we provide. If you’re not happy with how things are going, you can cancel at any time without paying any cancellation fees.              
                 </p>
             </li>
             <li class="cs-item">
@@ -77,7 +77,7 @@ eleventyNavigation:
 <section id="sbs-1640">
     <div class="cs-container">
         <div class="cs-content">
-            <span class="cs-topper">Expert Property Management for the Phoenix Metro Area</span>
+            <span class="cs-topper">Expert Property Management for the West Valley</span>
             <h2 class="cs-title">Full-Service Property Management You Can Count On
 
             </h2>
@@ -91,11 +91,11 @@ eleventyNavigation:
         </div>
         <div class="cs-stats-group">
           <p class="cs-text">
-            We make owning rental property in the Phoenix area simple, profitable, and stress-free by minimizing the total cost of ownership. Our philosophy is to manage every home professionally, efficiently, and with the same care we give our own. From regular inspections and prompt maintenance to on-time rent collection and proactive communication, we handle the details so you don’t have to. With a strong reputation for quality service, we’ve earned the trust of rental property owners throughout the Phoenix area.
+            We make owning rental property in the West Valley area simple, profitable, and stress-free by minimizing the total cost of ownership. Our philosophy is to manage every home professionally, efficiently, and with the same care we give our own. From regular inspections and prompt maintenance to on-time rent collection and proactive communication, we handle the details so you don’t have to. With a strong reputation for quality service, we’ve earned the trust of rental property owners throughout area.
           </p>
           
           <p class="cs-text">
-            With over 28 years of experience and a history of managing hundreds of rental homes, we know exactly what property owners expect from a great management partner. When you work with us, you’ll receive responsive service, attention to detail, and expert care for your investment. We proudly serve Phoenix, Goodyear, Surprise, Scottsdale, Litchfield Park, and surrounding West Valley areas. Try us—you’ll quickly see why so many owners choose to stay with us.
+            With over 28 years of experience and a history of managing hundreds of rental homes, we know exactly what property owners expect from a great management partner. When you work with us, you’ll receive responsive service, attention to detail, and expert care for your investment. We proudly serve Goodyear, Buckeye, Surprise, and many more areas around the Phoenix. Try us today and you will quickly see why so many owners choose to stay with us.
           </p>
           
             <ul class="cs-stats">
