--- a/src/content/pages/buckeye-utilities.html
+++ b/src/content/pages/buckeye-utilities.html
@@ -1,10 +1,10 @@
 ---
-title: 'Goodyear Utilities'
+title: 'Buckeye Utilities'
 description: 'Meta description for the page'
 preloadImg: '/assets/images/cabinets2.jpg'
-permalink: 'goodyear-utilities/'
+permalink: 'buckeye-utilities/'
 eleventyNavigation:
-    key: Goodyear Utilities
+    key: Buckeye Utilities
     order: 3300
 ---
 
