--- a/src/content/pages/gilbert-utilities.html
+++ b/src/content/pages/gilbert-utilities.html
@@ -1,10 +1,10 @@
 ---
-title: 'Goodyear Utilities'
+title: 'Gilbert Utilities'
 description: 'Meta description for the page'
 preloadImg: '/assets/images/cabinets2.jpg'
-permalink: 'goodyear-utilities/'
+permalink: 'gilbert-utilities/'
 eleventyNavigation:
-    key: Goodyear Utilities
+    key: Gilbert Utilities
     order: 3300
 ---
 
