--- a/src/content/pages/litchfield-utilities.html
+++ b/src/content/pages/litchfield-utilities.html
@@ -1,10 +1,10 @@
 ---
-title: 'Goodyear Utilities'
+title: 'Litchfield Park Utilities'
 description: 'Meta description for the page'
 preloadImg: '/assets/images/cabinets2.jpg'
-permalink: 'goodyear-utilities/'
+permalink: 'litchfield-park-utilities/'
 eleventyNavigation:
-    key: Goodyear Utilities
+    key: Litchfield Park Utilities
     order: 3300
 ---
 
