--- a/src/content/pages/phoenix-utilities.html
+++ b/src/content/pages/phoenix-utilities.html
@@ -1,10 +1,10 @@
 ---
-title: 'Goodyear Utilities'
+title: 'Phoenix Utilities'
 description: 'Meta description for the page'
 preloadImg: '/assets/images/cabinets2.jpg'
-permalink: 'goodyear-utilities/'
+permalink: 'phoenix-utilities/'
 eleventyNavigation:
-    key: Goodyear Utilities
+    key: Phoenix Utilities
     order: 3300
 ---
 
