--- a/src/content/pages/utility-info.html
+++ b/src/content/pages/utility-info.html
@@ -43,7 +43,7 @@ eleventyNavigation:
             </li>
             <li class="cs-li">
                 <span class="cs-number">02</span>
-                <a class="cs-link" href="">
+                <a class="cs-link" href="/buckeye-utilities">
                     <h3 class="cs-h3">Buckeye Utilities</h3>
                     <img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/photography-arrow.svg" alt="icon" width="48" height="48">
                 </a>
@@ -53,7 +53,7 @@ eleventyNavigation:
             </li>
             <li class="cs-li">
                 <span class="cs-number">03</span>
-                <a class="cs-link" href="">
+                <a class="cs-link" href="/surprise-utilities">
                     <h3 class="cs-h3">Surprise Utilities</h3>
                     <img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/photography-arrow.svg" alt="icon" width="48" height="48">
                 </a>
@@ -63,7 +63,7 @@ eleventyNavigation:
             </li>
             <li class="cs-li">
                 <span class="cs-number">04</span>
-                <a class="cs-link" href="">
+                <a class="cs-link" href="/litchfield-utilities">
                     <h3 class="cs-h3">Litchfield Park Utilities</h3>
                     <img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/photography-arrow.svg" alt="icon" width="48" height="48">
                 </a>
@@ -73,7 +73,7 @@ eleventyNavigation:
             </li>
             <li class="cs-li">
                 <span class="cs-number">05</span>
-                <a class="cs-link" href="">
+                <a class="cs-link" href="/avondale-utilities">
                     <h3 class="cs-h3">Avondale Utilities</h3>
                     <img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/photography-arrow.svg" alt="icon" width="48" height="48">
                 </a>
@@ -83,7 +83,7 @@ eleventyNavigation:
             </li>
             <li class="cs-li">
                 <span class="cs-number">06</span>
-                <a class="cs-link" href="">
+                <a class="cs-link" href="/peoria-utilities">
                     <h3 class="cs-h3">Peoria Utilities</h3>
                     <img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/photography-arrow.svg" alt="icon" width="48" height="48">
                 </a>
@@ -93,7 +93,7 @@ eleventyNavigation:
             </li>
             <li class="cs-li">
                 <span class="cs-number">07</span>
-                <a class="cs-link" href="">
+                <a class="cs-link" href="/glendale-utilities">
                     <h3 class="cs-h3">Glendale Utilities</h3>
                     <img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/photography-arrow.svg" alt="icon" width="48" height="48">
                 </a>
@@ -103,7 +103,7 @@ eleventyNavigation:
             </li>
             <li class="cs-li">
                 <span class="cs-number">08</span>
-                <a class="cs-link" href="">
+                <a class="cs-link" href="/phoenix-utilities">
                     <h3 class="cs-h3">Phoenix Utilities</h3>
                     <img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/photography-arrow.svg" alt="icon" width="48" height="48">
                 </a>
@@ -113,7 +113,7 @@ eleventyNavigation:
             </li>
             <li class="cs-li">
                 <span class="cs-number">09</span>
-                <a class="cs-link" href="">
+                <a class="cs-link" href="/gilbert-utilities">
                     <h3 class="cs-h3">Gilbert Utilities</h3>
                     <img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/photography-arrow.svg" alt="icon" width="48" height="48">
                 </a>
@@ -123,7 +123,7 @@ eleventyNavigation:
             </li>
             <li class="cs-li">
                 <span class="cs-number">10</span>
-                <a class="cs-link" href="">
+                <a class="cs-link" href="/chandler-utilities">
                     <h3 class="cs-h3">Chandler Utilities</h3>
                     <img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/photography-arrow.svg" alt="icon" width="48" height="48">
                 </a>
@@ -133,7 +133,7 @@ eleventyNavigation:
             </li>
             <li class="cs-li">
                 <span class="cs-number">11</span>
-                <a class="cs-link" href="">
+                <a class="cs-link" href="/mesa-utilities">
                     <h3 class="cs-h3">Mesa Utilities</h3>
                     <img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/photography-arrow.svg" alt="icon" width="48" height="48">
                 </a>
@@ -143,7 +143,7 @@ eleventyNavigation:
             </li>
             <li class="cs-li">
                 <span class="cs-number">12</span>
-                <a class="cs-link" href="">
+                <a class="cs-link" href="/tempe-utilities">
                     <h3 class="cs-h3">Tempe</h3>
                     <img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/photography-arrow.svg" alt="icon" width="48" height="48">
                 </a>
