--- a/src/index.html
+++ b/src/index.html
@@ -105,7 +105,7 @@ eleventyNavigation:
                         Schedule a free consultation where we visit your property, assess its condition, and provide an expert rental price estimate with no strings attached.
                     </p>
                     <a href="/contact" class="cs-link">
-                        Learn More
+                        Get Your Free Estimate
                         <img class="cs-arrow" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/chevron-right-red.svg" alt="icon" width="20" height="20" aria-hidden="true">
                     </a>
                 </div>
@@ -151,7 +151,7 @@ eleventyNavigation:
             <h2 class="cs-title">Trusted Property Management 
                 <span class="cs-color">Across the Valley</span></h2>
             <p class="cs-text">
-                We deliver full-service property management across the Phoenix metro and surrounding areas. With clear, competitive pricing and no hidden fees, we make owning rental property simple and stress-free. Expect reliable communication, expert guidance, and a team that treats your property like their own.            </p>
+                We deliver full-service property management throughout the West Valley, East Valley, and greater Phoenix metro area. With clear, competitive pricing and no hidden fees, we make owning rental property simple and stress-free. Expect reliable communication, expert guidance, and a team that treats your property like their own.            </p>
         </div>
         <ul class="cs-card-group">
             <li class="cs-item">
@@ -297,10 +297,12 @@ eleventyNavigation:
             </picture>
         </div>
         <div class="cs-content">
-            <span class="cs-topper">Why Choose SunSeeker Rentals</span>
+            <span class="cs-topper">Expert Management. Local Focus.</span>
             <h2 class="cs-title">Maximize Your Rental Property’s Potential with Sunseeker Rentals</h2>
             <p class="cs-text">
-                Are you looking for a trusted property management company in Phoenix or the surrounding area? Sunseeker Rentals provides personalized property management solutions tailored to each neighborhood’s unique needs. With deep local expertise, we optimize rental pricing, minimize vacancies, and ensure a seamless experience for property owners. Our comprehensive services include tenant screening, marketing, maintenance, and financial reporting, giving you peace of mind and maximum ROI. We prioritize efficiency, transparency, and clear communication, so you’re always informed. Don’t let the stress of managing a property hold you back—schedule a free consultation today and discover how Sunseeker Rentals can elevate your rental success! Call us now or request a callback to discuss your customized property management strategy.
+                Looking for professional property management in Goodyear, Surprise, Avondale, or other cities around Phoenix? Sunseeker Rentals is based in the heart of Goodyear and provides personalized property management solutions tailored to each neighborhood’s unique needs. With deep local expertise, we optimize rental pricing, minimize vacancies, and ensure a seamless experience for property owners. 
+            <p class="cs-text">
+                Our comprehensive services include tenant screening, marketing, maintenance, and financial reporting, giving you peace of mind and maximum ROI. We prioritize efficiency, transparency, and clear communication, so you’re always informed. Don’t let the stress of managing a property hold you back—schedule a free consultation today and discover how Sunseeker Rentals can elevate your rental success!
             </p>
             <a href="https://calendly.com/sunseeker-rentals/property-management-call" target="_blank" class="cs-button-solid">Schedule A Phone Call Today</a>
         </div>
