created new contact page and compressed images

--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -27,10 +27,10 @@ eleventyNavigation:
         <div class="cs-flex">
             <picture class="cs-picture">
                 <!--Mobile Image-->
-                <source media="(max-width: 600px)" srcset="/assets/images/why-us-m.png">
+                <source media="(max-width: 600px)" srcset="/assets/images/why-us-m.webp">
                 <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" srcset="/assets/images/why-us.png">
-                <img loading="lazy" decoding="async" src="/assets/images/why-us.png" alt="therapy" width="608" height="400">
+                <source media="(min-width: 601px)" srcset="/assets/images/why-us.webp">
+                <img loading="lazy" decoding="async" src="/assets/images/why-us.webp" alt="therapy" width="608" height="400">
             </picture>
             <div class="cs-content">
                 <span class="cs-topper">Why Choose SunSeeker Rentals</span>
@@ -83,10 +83,10 @@ eleventyNavigation:
             </h2>
             <picture class="cs-picture">
                 <!--Mobile Image-->
-                <source media="(max-width: 600px)" srcset="/assets/images/about-us2-m.png">
+                <source media="(max-width: 600px)" srcset="/assets/images/about-us2-m.webp">
                 <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" srcset="/assets/images/about-us2.png">
-                <img loading="lazy" decoding="async" src="/assets/images/about-us2.png" alt="people" width="608" height="406">
+                <source media="(min-width: 601px)" srcset="/assets/images/about-us2.webp">
+                <img loading="lazy" decoding="async" src="/assets/images/about-us2.webp" alt="people" width="608" height="406">
             </picture>
         </div>
         <div class="cs-stats-group">
@@ -224,10 +224,10 @@ eleventyNavigation:
     <!--Background Image-->
     <picture class="cs-background">
         <!--Mobile Image-->
-        <source media="(max-width: 600px)" srcset="/assets/images/rental-estimate-m.png">
+        <source media="(max-width: 600px)" srcset="/assets/images/rental-estimate-m.webp">
         <!--Tablet and above Image-->
-        <source media="(min-width: 601px)" srcset="/assets/images/rental-estimate.png">
-        <img loading="lazy" decoding="async" src="/assets/images/rental-estimate.png" alt="hair salon" width="2500" height="770">
+        <source media="(min-width: 601px)" srcset="/assets/images/rental-estimate.webp">
+        <img loading="lazy" decoding="async" src="/assets/images/rental-estimate.webp" alt="hair salon" width="2500" height="770">
     </picture>
 </section>
 
@@ -250,15 +250,15 @@ eleventyNavigation:
             <!--Mobile Image-->
             <source
                   media="(max-width: 600px)"
-                  srcset="/assets/images/goodyear-m.png">
+                  srcset="/assets/images/goodyear-m.webp">
             <!--Tablet and above Image-->
             <source
                   media="(min-width: 601px)"
-                  srcset="/assets/images/goodyear.png">
+                  srcset="/assets/images/goodyear.webp">
             <img
                   loading="lazy"
                   decoding="async"
-                  src="/assets/images/goodyear.png"
+                  src="/assets/images/goodyear.webp"
                   alt="mechanic"
                   width="413"
                   height="240"
@@ -288,15 +288,15 @@ eleventyNavigation:
               <!--Mobile Image-->
               <source
                     media="(max-width: 600px)"
-                    srcset="/assets/images/buckeye-m.png">
+                    srcset="/assets/images/buckeye-m.webp">
               <!--Tablet and above Image-->
               <source
                     media="(min-width: 601px)"
-                    srcset="/assets/images/buckeye.png">
+                    srcset="/assets/images/buckeye.webp">
               <img
                     loading="lazy"
                     decoding="async"
-                    src="/assets/images/buckeye.png"
+                    src="/assets/images/buckeye.webp"
                     alt="mechanic"
                     width="413"
                     height="240"
@@ -326,15 +326,15 @@ eleventyNavigation:
               <!--Mobile Image-->
               <source
                     media="(max-width: 600px)"
-                    srcset="/assets/images/surprise-m.png">
+                    srcset="/assets/images/surprise-m.webp">
               <!--Tablet and above Image-->
               <source
                     media="(min-width: 601px)"
-                    srcset="/assets/images/surprise.png">
+                    srcset="/assets/images/surprise.webp">
               <img
                     loading="lazy"
                     decoding="async"
-                    src="/assets/images/surprise.png"
+                    src="/assets/images/surprise.webp"
                     alt="mechanic"
                     width="413"
                     height="240"
@@ -365,15 +365,15 @@ eleventyNavigation:
               <!--Mobile Image-->
               <source
                     media="(max-width: 600px)"
-                    srcset="/assets/images/litchfield-park-m.png">
+                    srcset="/assets/images/litchfield-park-m.webp">
               <!--Tablet and above Image-->
               <source
                     media="(min-width: 601px)"
-                    srcset="/assets/images/litchfield-park.png">
+                    srcset="/assets/images/litchfield-park.webp">
               <img
                     loading="lazy"
                     decoding="async"
-                    src="/assets/images/litchfield-park.png"
+                    src="/assets/images/litchfield-park.webp"
                     alt="mechanic"
                     width="413"
                     height="240"
@@ -404,15 +404,15 @@ eleventyNavigation:
               <!--Mobile Image-->
               <source
                     media="(max-width: 600px)"
-                    srcset="/assets/images/avondale-m.png">
+                    srcset="/assets/images/avondale-m.webp">
               <!--Tablet and above Image-->
               <source
                     media="(min-width: 601px)"
-                    srcset="/assets/images/avondale.png">
+                    srcset="/assets/images/avondale.webp">
               <img
                     loading="lazy"
                     decoding="async"
-                    src="/assets/images/avondale.png"
+                    src="/assets/images/avondale.webp"
                     alt="mechanic"
                     width="413"
                     height="240"
@@ -442,15 +442,15 @@ eleventyNavigation:
               <!--Mobile Image-->
               <source
                     media="(max-width: 600px)"
-                    srcset="/assets/images/peoria-m.png">
+                    srcset="/assets/images/peoria-m.webp">
               <!--Tablet and above Image-->
               <source
                     media="(min-width: 601px)"
-                    srcset="/assets/images/peoria.png">
+                    srcset="/assets/images/peoria.webp">
               <img
                     loading="lazy"
                     decoding="async"
-                    src="/assets/images/peoria.png"
+                    src="/assets/images/peoria.webp"
                     alt="mechanic"
                     width="413"
                     height="240"
@@ -481,15 +481,15 @@ eleventyNavigation:
             <!--Mobile Image-->
             <source
                   media="(max-width: 600px)"
-                  srcset="/assets/images/glendale-m.png">
+                  srcset="/assets/images/glendale-m.webp">
             <!--Tablet and above Image-->
             <source
                   media="(min-width: 601px)"
-                  srcset="/assets/images/glendale.png">
+                  srcset="/assets/images/glendale.webp">
             <img
                   loading="lazy"
                   decoding="async"
-                  src="/assets/images/glendale.png"
+                  src="/assets/images/glendale.webp"
                   alt="mechanic"
                   width="413"
                   height="240"
@@ -520,15 +520,15 @@ eleventyNavigation:
             <!--Mobile Image-->
             <source
                   media="(max-width: 600px)"
-                  srcset="/assets/images/phoenix-m.png">
+                  srcset="/assets/images/phoenix-m.webp">
             <!--Tablet and above Image-->
             <source
                   media="(min-width: 601px)"
-                  srcset="/assets/images/phoenix.png">
+                  srcset="/assets/images/phoenix.webp">
             <img
                   loading="lazy"
                   decoding="async"
-                  src="/assets/images/phoenix.png"
+                  src="/assets/images/phoenix.webp"
                   alt="mechanic"
                   width="413"
                   height="240"
@@ -558,15 +558,15 @@ eleventyNavigation:
             <!--Mobile Image-->
             <source
                   media="(max-width: 600px)"
-                  srcset="/assets/images/tempe-m.png">
+                  srcset="/assets/images/tempe-m.webp">
             <!--Tablet and above Image-->
             <source
                   media="(min-width: 601px)"
-                  srcset="/assets/images/tempe.png">
+                  srcset="/assets/images/tempe.webp">
             <img
                   loading="lazy"
                   decoding="async"
-                  src="/assets/images/tempe.png"
+                  src="/assets/images/tempe.webp"
                   alt="mechanic"
                   width="413"
                   height="240"
@@ -596,15 +596,15 @@ eleventyNavigation:
             <!--Mobile Image-->
             <source
                   media="(max-width: 600px)"
-                  srcset="/assets/images/mesa-m.png">
+                  srcset="/assets/images/mesa-m.webp">
             <!--Tablet and above Image-->
             <source
                   media="(min-width: 601px)"
-                  srcset="/assets/images/mesa.png">
+                  srcset="/assets/images/mesa.webp">
             <img
                   loading="lazy"
                   decoding="async"
-                  src="/assets/images/mesa.png"
+                  src="/assets/images/mesa.webp"
                   alt="mechanic"
                   width="413"
                   height="240"
@@ -634,15 +634,15 @@ eleventyNavigation:
             <!--Mobile Image-->
             <source
                   media="(max-width: 600px)"
-                  srcset="/assets/images/gilbert-m.png">
+                  srcset="/assets/images/gilbert-m.webp">
             <!--Tablet and above Image-->
             <source
                   media="(min-width: 601px)"
-                  srcset="/assets/images/gilbert.png">
+                  srcset="/assets/images/gilbert.webp">
             <img
                   loading="lazy"
                   decoding="async"
-                  src="/assets/images/gilbert.png"
+                  src="/assets/images/gilbert.webp"
                   alt="mechanic"
                   width="413"
                   height="240"
@@ -672,15 +672,15 @@ eleventyNavigation:
             <!--Mobile Image-->
             <source
                   media="(max-width: 600px)"
-                  srcset="/assets/images/chandler-m.png">
+                  srcset="/assets/images/chandler-m.webp">
             <!--Tablet and above Image-->
             <source
                   media="(min-width: 601px)"
-                  srcset="/assets/images/chandler.png">
+                  srcset="/assets/images/chandler.webp">
             <img
                   loading="lazy"
                   decoding="async"
-                  src="/assets/images/chandler.png"
+                  src="/assets/images/chandler.webp"
                   alt="mechanic"
                   width="413"
                   height="240"
