--- a/src/index.html
+++ b/src/index.html
@@ -94,10 +94,10 @@ eleventyNavigation:
             <li class="cs-item">
                 <picture class="cs-picture">
                     <!--Mobile Image-->
-                    <source media="(max-width: 600px)" srcset="/assets/images/rental-value.png">
+                    <source media="(max-width: 600px)" srcset="/assets/images/rental-value.webp">
                     <!--Tablet and above Image-->
-                    <source media="(min-width: 601px)" srcset="/assets/images/rental-value.png">
-                    <img loading="lazy" decoding="async" src="/assets/images/rental-value.png" alt="icon" width="48" height="48">
+                    <source media="(min-width: 601px)" srcset="/assets/images/rental-value.webp">
+                    <img loading="lazy" decoding="async" src="/assets/images/rental-value.webp" alt="icon" width="48" height="48">
                 </picture>
                 <div class="cs-info">
                     <h3 class="cs-h3">Discover the Value of Your Rental</h3>
@@ -113,10 +113,10 @@ eleventyNavigation:
             <li class="cs-item">
                 <picture class="cs-picture">
                     <!--Mobile Image-->
-                    <source media="(max-width: 600px)" srcset="/assets/images/full-service-management.png">
+                    <source media="(max-width: 600px)" srcset="/assets/images/full-service-management.webp">
                     <!--Tablet and above Image-->
-                    <source media="(min-width: 601px)" srcset="/assets/images/full-service-management.png">
-                    <img loading="lazy" decoding="async" src="/assets/images/full-service-management.png" alt="icon" width="48" height="48">
+                    <source media="(min-width: 601px)" srcset="/assets/images/full-service-management.webp">
+                    <img loading="lazy" decoding="async" src="/assets/images/full-service-management.webp" alt="icon" width="48" height="48">
                 </picture>
                 <div class="cs-info">
                     <h3 class="cs-h3">Full-Service Management for Homeowners</h3>
@@ -134,9 +134,9 @@ eleventyNavigation:
 
     <!-- Background Image -->
     <picture class="cs-background">
-        <source media="(max-width: 600px)" srcset="/assets/images/hero-m.png">
-        <source media="(min-width: 601px)" srcset="/assets/images/hero.png">
-        <img loading="lazy" decoding="async" src="/assets/images/hero.png" alt="field" width="1920" height="1200" aria-hidden="true">
+        <source media="(max-width: 600px)" srcset="/assets/images/hero-m.webp">
+        <source media="(min-width: 601px)" srcset="/assets/images/hero.webp">
+        <img loading="lazy" decoding="async" src="/assets/images/hero.webp" alt="field" width="1920" height="1200" aria-hidden="true">
     </picture>
 </section>
 
@@ -174,10 +174,10 @@ eleventyNavigation:
         <a href="https://www.youtube.com/watch?v=Tv4xwtJt1qo&embeds_referring_euri=https%3A%2F%2Fwww.valleyofthesunrentals.com%2F&source_ve_path=Mjg2NjY" target="_blank" class="cs-big-link">
             <!--Background Image-->
             <picture class="cs-background">
-                <source media="(min-width: 1024px)" srcset="/assets/images/thumbnail.png">
-                <source media="(min-width: 601px)" srcset="/assets/images/thumbnail.png">
-                <source media="(max-width: 600px)" srcset="/assets/images/thumbnail-m.png">
-                <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/thumbnail.png" alt="meeting" width="1280" height="580">
+                <source media="(min-width: 1024px)" srcset="/assets/images/thumbnail.webp">
+                <source media="(min-width: 601px)" srcset="/assets/images/thumbnail.webp">
+                <source media="(max-width: 600px)" srcset="/assets/images/thumbnail-m.webp">
+                <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/thumbnail.webp" alt="meeting" width="1280" height="580">
             </picture>
             <!--Play Icon-->
             <img class="cs-link-icon" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Stats/play-yellow.svg" alt="play icon" width="110" height="110">
@@ -260,9 +260,9 @@ eleventyNavigation:
         </div>
         <!--Image Right-->
         <picture class="cs-picture">
-            <source media="(max-width: 600px)" srcset="/assets/images/google-gauranteed.png">
-            <source media="(min-width: 601px)" srcset="/assets/images/google-gauranteed.png">
-            <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/google-gauranteed.png" alt="playing piano" width="630" height="411">
+            <source media="(max-width: 600px)" srcset="/assets/images/google-gauranteed.webp">
+            <source media="(min-width: 601px)" srcset="/assets/images/google-gauranteed.webp">
+            <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/images/google-gauranteed.webp" alt="playing piano" width="630" height="411">
         </picture>
     </div>
 </section>
@@ -276,9 +276,9 @@ eleventyNavigation:
         <!-- Left Section -->
         <div class="cs-image-group">
             <picture class="cs-picture cs-picture1">
-                <source media="(max-width: 600px)" srcset="assets/images/why-choose1-m.png">
-                <source media="(min-width: 601px)" srcset="assets/images/why-choose1.png">
-                <img loading="lazy" decoding="async" src="assets/images/why-choose1.png" alt="people outside" width="306" height="360">
+                <source media="(max-width: 600px)" srcset="assets/images/why-choose1-m.webp">
+                <source media="(min-width: 601px)" srcset="assets/images/why-choose1.webp">
+                <img loading="lazy" decoding="async" src="assets/images/why-choose1.webp" alt="people outside" width="306" height="360">
             </picture>
             <picture class="cs-picture cs-picture2">
                 <source media="(max-width: 600px)" srcset="assets/images/why-choose2-m.png">
