--- a/src/content/pages/owners.html
+++ b/src/content/pages/owners.html
@@ -36,9 +36,9 @@ eleventyNavigation:
                     <h3 class="cs-h3"><span class="cs-span">Owner</span> Login</h3>
                 </a>
                 <picture class="cs-background">
-                    <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting1.jpg">
-                    <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting1.jpg">
-                    <img decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting1.jpg" alt="construction" width="305" height="305" aria-hidden="true">
+                    <source media="(max-width: 600px)" srcset="/assets/images/portal.webp">
+                    <source media="(min-width: 601px)" srcset="/assets/images/portal.webp">
+                    <img decoding="async" src="/assets/images/portal.webp" alt="construction" width="305" height="305" aria-hidden="true">
                 </picture>
             </li>
             <li class="cs-item">
@@ -46,9 +46,9 @@ eleventyNavigation:
                     <h3 class="cs-h3"><span class="cs-span">View</span> Statements</h3>
                 </a>
                 <picture class="cs-background">
-                    <source media="(max-width: 600px)" srcset="/assets/images/statement.png">
-                    <source media="(min-width: 601px)" srcset="/assets/images/statement.png">
-                    <img decoding="async" src="/assets/images/statement.png" alt="construction" width="305" height="305" aria-hidden="true">
+                    <source media="(max-width: 600px)" srcset="/assets/images/statement.webp">
+                    <source media="(min-width: 601px)" srcset="/assets/images/statement.webp">
+                    <img decoding="async" src="/assets/images/statement.webp" alt="construction" width="305" height="305" aria-hidden="true">
                 </picture>
             </li>
         </ul>
