--- a/src/content/pages/reviews.html
+++ b/src/content/pages/reviews.html
@@ -1,5 +1,5 @@
 ---
-title: 'Reviews | Code Stitch Web Designs'
+title: 'Reviews'
 description: 'Meta description for the page'
 preloadImg: '/assets/images/cabinets2.jpg'
 permalink: 'reviews/'
@@ -16,18 +16,7 @@ eleventyNavigation:
 
 {% block body %}
 
-    <!-- ============================================ -->
-    <!--                    LANDING                   -->
-    <!-- ============================================ -->
-
-    <section id="int-hero">
-        <h1 id="home-h">Our Reviews</h1>
-        <picture class="cs-picture">
-            <source media="(max-width: 600px)" srcset="/assets/images/landing-m.webp">
-            <source media="(min-width: 601px)" srcset="/assets/images/landing.jpg">
-            <img aria-hidden="true" decoding="async" src="/assets/images/landing.jpg" alt="new home" width="2500" height="1667" loading="eager">
-        </picture>
-    </section>
+{% include 'components/banner.html' %}
 
     <!-- ============================================ -->
     <!--                  Reviews                     -->
