--- a/src/content/pages/sitemap.html
+++ b/src/content/pages/sitemap.html
@@ -50,25 +50,38 @@ eleventyNavigation:
         <div class="cs-content">
             <h1 class="cs-title">Useful Links</h1>
             <ul>
-                <li><a href="#">Home Page</a></li>
-                <li><a href="#">Buy A Home</a></li>
-                <li><a href="#">Sell Your Home</a></li>
-                <li><a href="#">Houses for Rent</a></li>
-                <li><a href="#">Apply for a Rental</a></li>
-                <li><a href="#">Property Management</a></li>
-                <li><a href="#">Reviews on Google!</a></li>
-                <li><a href="#">Ask a Mgmt Question</a></li>
-                <li><a href="#">Phoenix Home Monitoring</a></li>
-                <li><a href="#">Goodyear, AZ</a></li>
-                <li><a href="#">Surprise, AZ</a></li>
-                <li><a href="#">Scottsdale, AZ</a></li>
-                <li><a href="#">Litchfield Park, AZ</a></li>
+                <li><a href="/about">About Us</a></li>
+                <li><a href="/rentals">Apply for a Rental</a></li>
+                <li><a href="/contact">Ask a Property Management Question</a></li>
                 <li><a href="#">Avondale, AZ</a></li>
                 <li><a href="#">Buckeye, AZ</a></li>
-                <li><a href="#">Resources</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Sitemap</a></li>
-                <li><a href="#">Vendors</a></li>
+                <li><a href="#">Buy A Home</a></li>
+                <li><a href="#">Chandler, AZ</a></li>
+                <li><a href="/contact">Contact Us</a></li>
+                <li><a href="/rentals">Current Rentals</a></li>
+                <li><a href="#">Gilbert, AZ</a></li>
+                <li><a href="#">Glendale, AZ</a></li>
+                <li><a href="#">Goodyear, AZ</a></li>
+                <li><a href="/rentals">Houses for Rent</a></li>
+                <li><a href="#">Litchfield Park, AZ</a></li>
+                <li><a href="#">Mesa, AZ</a></li>
+                <li><a href="https://sunseeker.appfolio.com/oportal/users/log_in" target="_blank">Owner Login</a></li>
+                <li><a href="/owners">Owners Page</a></li>
+                <li><a href="https://www.paypal.com/ncp/payment/9RMEJ74HRU9LL" target="_blank">Pay Application Fees</a></li>
+                <li><a href="#">Peoria, AZ</a></li>
+                <li><a href="#">Phoenix, AZ</a></li>
+                <li><a href="/reviews">Reviews</a></li>
+                <li><a href="https://www.google.com/search?q=sunseeker+rentals&rlz=1C1VDKB_enUS1004US1004&oq=sunseeker+rentals&gs_lcrp=EgZjaHJvbWUqDwgAECMYJxjjAhiABBiKBTIPCAAQIxgnGOMCGIAEGIoFMhUIARAuGCcYrwEYxwEYgAQYigUYjgUyEAgCEC4YxwEYsQMY0QMYgAQyFggDEC4YrwEYxwEYsQMYgAQYmAUYmgUyBwgEEAAYgAQyBggFEEUYPDIGCAYQRRg8MgYIBxBFGDzSAQg1MTIwajBqN6gCCLACAQ&sourceid=chrome&ie=UTF-8#lrd=0x872b386610816511:0x3232c3c142555ad2,1,,,," target="_blank">Reviews on Google!</a></li>
+                <li><a href="https://calendly.com/sunseeker-rentals/property-management-call?month=2025-04" target="_blank">Schedule a phone call</a></li>
+                <li><a href="#">Sell Your Home</a></li>
+                <li><a href="#">Surprise, AZ</a></li>
+                <li><a href="#">Tempe, AZ</a></li>
+                <li><a href="https://sunseeker.appfolio.com/connect/users/sign_in" target="_blank">Tenant Portal</a></li>
+                <li><a href="/tenants">Tenants Page</a></li>
+                <li><a href="/utility-info">Utility Info</a></li>
+                <li><a href="/vendors">Vendors Page</a></li>
+                <li><a href="https://www.dropbox.com/request/yX4yL4sUaGVCRtaGlhH7" target="_blank">Vendors Submit Invoices Here</a></li>
+                <li><a href="https://sunseeker.appfolio.com/oportal/users/log_in" target="_blank">View Statements</a></li>
             </ul>
             
         </div>
@@ -76,7 +89,5 @@ eleventyNavigation:
     <div class="cs-bubbles" aria-hidden="true"></div>
 </section>
                                 
-
-    {% include 'components/cta.html' %}
 
 {% endblock %}
