--- a/src/content/pages/tenants.html
+++ b/src/content/pages/tenants.html
@@ -35,9 +35,9 @@ eleventyNavigation:
                     <h3 class="cs-h3"><span class="cs-span">View </br>Tenant</span> Portal</h3>
                 </a>
                 <picture class="cs-background">
-                    <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting1.jpg">
-                    <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting1.jpg">
-                    <img decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/meeting1.jpg" alt="construction" width="305" height="305" aria-hidden="true">
+                    <source media="(max-width: 600px)" srcset="/assets/images/portal.webp">
+                    <source media="(min-width: 601px)" srcset="/assets/images/portal.webp">
+                    <img decoding="async" src="/assets/images/portal.webp" alt="construction" width="305" height="305" aria-hidden="true">
                 </picture>
             </li>
             <li class="cs-item">
@@ -45,9 +45,9 @@ eleventyNavigation:
                     <h3 class="cs-h3"><span class="cs-span">Pay </br>Application</span> Fees</h3>
                 </a>
                 <picture class="cs-background">
-                    <source media="(max-width: 600px)" srcset="/assets/images/pay-application-fee.png">
-                    <source media="(min-width: 601px)" srcset="/assets/images/pay-application-fee.png">
-                    <img decoding="async" src="/assets/images/pay-application-fee.png" alt="pay-application-fee" width="305" height="305" aria-hidden="true">
+                    <source media="(max-width: 600px)" srcset="/assets/images/pay-application-fee.webp">
+                    <source media="(min-width: 601px)" srcset="/assets/images/pay-application-fee.webp">
+                    <img decoding="async" src="/assets/images/pay-application-fee.webp" alt="pay-application-fee" width="305" height="305" aria-hidden="true">
                 </picture>
             </li>
             <li class="cs-item">
@@ -55,9 +55,9 @@ eleventyNavigation:
                     <h3 class="cs-h3"><span class="cs-span">Utility</span> Info</h3>
                 </a>
                 <picture class="cs-background">
-                    <source media="(max-width: 600px)" srcset="/assets/images/utility.png">
-                    <source media="(min-width: 601px)" srcset="/assets/images/utility.png">
-                    <img decoding="async" src="/assets/images/utility.png" alt="construction" width="305" height="305" aria-hidden="true">
+                    <source media="(max-width: 600px)" srcset="/assets/images/water-utility.webp">
+                    <source media="(min-width: 601px)" srcset="/assets/images/water-utility.webp">
+                    <img decoding="async" src="/assets/images/water-utility.webp" alt="construction" width="305" height="305" aria-hidden="true">
                 </picture>
             </li>
             <li class="cs-item">
@@ -65,9 +65,9 @@ eleventyNavigation:
                     <h3 class="cs-h3"><span class="cs-span">Apply For</br></span>A Rental</h3>
                 </a>
                 <picture class="cs-background">
-                    <source media="(max-width: 600px)" srcset="/assets/images/apply-for-rental.png">
-                    <source media="(min-width: 601px)" srcset="/assets/images/apply-for-rental.png">
-                    <img decoding="async" src="/assets/images/apply-for-rental.png" alt="apply-for-rental" width="305" height="305" aria-hidden="true">
+                    <source media="(max-width: 600px)" srcset="/assets/images/apply-for-rental.webp">
+                    <source media="(min-width: 601px)" srcset="/assets/images/apply-for-rental.webp">
+                    <img decoding="async" src="/assets/images/apply-for-rental.webp" alt="apply-for-rental" width="305" height="305" aria-hidden="true">
                 </picture>
             </li>
         </ul>
