--- a/src/content/pages/vendors.html
+++ b/src/content/pages/vendors.html
@@ -37,9 +37,9 @@ eleventyNavigation:
                     <h3 class="cs-h3"><span class="cs-span">Submit </span>Invoices Here</h3>
                 </a>
                 <picture class="cs-background">
-                    <source media="(max-width: 600px)" srcset="/assets/images/vendors.png">
-                    <source media="(min-width: 601px)" srcset="/assets/images/vendors.png">
-                    <img decoding="async" src="/assets/images/vendors.png" alt="construction" width="305" height="305" aria-hidden="true">
+                    <source media="(max-width: 600px)" srcset="/assets/images/vendors.webp">
+                    <source media="(min-width: 601px)" srcset="/assets/images/vendors.webp">
+                    <img decoding="async" src="/assets/images/vendors.webp" alt="construction" width="305" height="305" aria-hidden="true">
                 </picture>
             </li>
 
