Added contact form netlify attribute

--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -190,7 +190,7 @@ eleventyNavigation:
             <h4 class="cs-text">Fill out your info and we'll reach out to schedule a free rental evaluation.</h4>
         </div>
         <!--Form-->
-        <form class="cs-form" id="cs-form-983" name="Rent Consultation Form" method="post" netlify>
+        <form class="cs-form" id="cs-form-983" name="Rental Consultation Form" method="post" netlify>
             <label class="cs-label">
                 First Name
                 <input class="cs-input" required type="text" id="name-587-983" name="First Name" placeholder="First Name">
