--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -22,7 +22,7 @@ permalink: 'contact/'
 <section id="contact-1333">
     <div class="cs-container">
         <!--Form-->
-        <form class="cs-form" id="cs-form-1333" name="Contact Form" method="post">
+        <form class="cs-form" id="cs-form-1333" name="Contact Form" method="post" netlify>
             <div class="cs-content">
                 <span class="cs-topper">Contact Us</span>
                 <h2 class="cs-title">Get In Touch</h2>
