added first and last name to form on contact page

--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -28,8 +28,12 @@ permalink: 'contact/'
                 <h2 class="cs-title">Get In Touch</h2>
             </div>
             <label class="cs-label">
-                Name
-                <input class="cs-input" required type="text" id="name-1333" name="name" placeholder="Name">
+                First Name
+                <input class="cs-input" required type="text" id="name-1333" name="Fname" placeholder="First Name">
+            </label>
+            <label class="cs-label">
+                Last Name
+                <input class="cs-input" required type="text" id="name-1333" name="Lname" placeholder="Last Name">
             </label>
             <label class="cs-label cs-email">
                 Email
